--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,10 @@ body {
   padding: 15rem 0;
   position: relative; }
 
+.section-book {
+  padding: 10rem 10rem;
+  background-image: linear-gradient(to right bottom, #7ED56F, #28B485); }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -379,6 +383,16 @@ body {
   .story:hover .story__img {
     transform: translateX(-4rem) scale(1);
     filter: blur(3px) brightness(80%); }
+
+.book {
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url("../img/nat-10.jpg");
+  background-size: cover;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
+  height: 50rem; }
+  .book__form {
+    width: 50%;
+    padding: 6rem; }
 
 .header {
   height: 95vh;
