--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@
 @import "components/bg-video";
 @import "components/card";
 @import "components/story";
+@import "components/book";
 
 @import "layout/header";
 @import "layout/grid"; 
