--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -25,3 +25,7 @@
     padding: 15rem 0;
     position: relative;
 } 
+.section-book{
+    padding: 10rem 10rem;
+    background-image: linear-gradient(to right bottom,$color-primary-light,$color-primary-dark);
+}
