--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,64 @@ body {
   padding: 10rem 10rem;
   background-image: linear-gradient(to right bottom, #7ED56F, #28B485); }
 
+.navigation__checkbox {
+  display: none; }
+
+.navigation__button {
+  background-color: #FFF;
+  height: 6rem;
+  width: 6rem;
+  border-radius: 50%;
+  position: fixed;
+  z-index: 25;
+  top: 6.5rem;
+  right: 6.5rem; }
+
+.navigation__background {
+  height: 6rem;
+  width: 6rem;
+  border-radius: 50%;
+  background-image: radial-gradient(#7ED56F, #28B485);
+  position: fixed;
+  z-index: 23;
+  top: 6.5rem;
+  right: 6.5rem;
+  transform: scale(50); }
+
+.navigation__nav {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 24; }
+
+.navigation__list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none; }
+
+.navigation__item {
+  margin: 1rem;
+  text-align: center; }
+
+.navigation__link:link, .navigation__link:visited {
+  font-size: 3rem;
+  font-weight: 300;
+  color: #FFF;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 1rem 2rem;
+  background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #FFF 50%);
+  background-size: 220%;
+  transition: all .4s; }
+
+.navigation__link:hover, .navigation__link:active {
+  color: #55C57A;
+  background-size: 100%; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
