--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 
 @import "pages/home";
 
+@import "components/navigation";
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
