--- a/css/styles.css
+++ b/css/styles.css
@@ -156,22 +156,26 @@ body {
   z-index: 23;
   top: 6.5rem;
   right: 6.5rem;
-  transform: scale(50); }
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.2);
+  transition: transform .8s; }
 
 .navigation__nav {
   height: 100vh;
-  width: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 24; }
+  z-index: 24;
+  opacity: 0;
+  width: 0;
+  transition: all 0.7s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
 
 .navigation__list {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  list-style: none; }
+  list-style: none;
+  width: 100%; }
 
 .navigation__item {
   margin: 1rem;
@@ -191,6 +195,13 @@ body {
 .navigation__link:hover, .navigation__link:active {
   color: #55C57A;
   background-size: 100%; }
+
+.navigation__checkbox:checked ~ .navigation__background {
+  transform: scale(50); }
+
+.navigation__checkbox:checked ~ .navigation__nav {
+  width: 100%;
+  opacity: 1; }
 
 .btn:link, .btn:visited {
   text-transform: uppercase;
