--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -13,7 +13,7 @@
         z-index: 25;
         top: 6.5rem;
         right: 6.5rem;
-    }
+    } 
 
 
     &__background{
@@ -25,24 +25,28 @@
         z-index: 23;
         top: 6.5rem;
         right: 6.5rem;
-
-        transform: scale(50);
+        box-shadow: 0 1rem 3rem rgba($color: $color-black, $alpha: .2);
+        transition: transform .8s;
     }
     &__nav{
         height: 100vh;
-        width: 100%;
         position: fixed;
         top: 0;
         left: 0;
-        z-index: 24;
+        z-index: 24; 
+
+        opacity: 0;
+        width: 0;
+        transition : all .7s cubic-bezier(.68, -.55, .265, 1.55); 
+       
     }
     &__list{
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%,-50%);
-        list-style: none;
-
+        list-style: none; 
+        width: 100%;
     }
     &__item{
         margin: 1rem ;
@@ -67,4 +71,12 @@
             background-size: 100%;
         }  
     } 
+    &__checkbox:checked ~ &__background{
+        // width: 100%;
+        transform: scale(50);
+    }
+    &__checkbox:checked ~ &__nav{
+        width: 100%;
+        opacity: 1;
+    }
 }   
