--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -1,11 +1,12 @@
 .navigation{
  
     &__checkbox{
+        //Hiding the checkbox
         display: none;
     } 
 
     &__button{  
-        background-color: $color-white;
+        background-color: $color-white; 
         height: 6rem;
         width: 6rem;
         border-radius: 50%;
@@ -13,6 +14,8 @@
         z-index: 25;
         top: 6.5rem;
         right: 6.5rem;
+        text-align: center;
+        cursor: pointer;
     } 
 
 
@@ -72,11 +75,54 @@
         }  
     } 
     &__checkbox:checked ~ &__background{
-        // width: 100%;
+        //When checkbox is ticked, background seems like expanding.
         transform: scale(50);
     }
     &__checkbox:checked ~ &__nav{
+        //On tick, nav is restored back to 100% width.
         width: 100%;
         opacity: 1;
     }
-}   
+    &__icon{
+        position: relative; 
+        margin-top: 3rem;
+        &,
+        &::before,
+        &::after{
+            width: 3rem;
+            height: 2px;
+            background-color: $color-grey-dark;
+            display: inline-block;
+        }
+        &::before,
+        &::after{
+            content: "";  
+            position: absolute;
+            left: 0;
+            transition: all .4s; 
+        }
+        &::before{
+            top: -.8rem;
+        }
+        &::after{
+            top: .8rem;
+        }
+    }
+    &__button:hover &__icon::before{
+        top: -1rem;
+    }
+    &__button:hover &__icon::after{
+        top: 1rem;
+    }
+    &__checkbox:checked + &__button &__icon{  
+        background-color: transparent; 
+        &::before{
+            top: 0;
+            transform: rotate(135deg);
+        } 
+        &::after{
+            top: 0;
+            transform: rotate(-135deg);  
+        }
+    } 
+}    
